kubernetes/apps/ai/reranker/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: reranker-egress-internal
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: reranker
  egress:
    - toFQDNs:
        - matchName: cas-bridge.xethub.hf.co
        - matchName: cas-server.xethub.hf.co
        - matchName: huggingface.co
        - matchName: transfer.xethub.hf.co
        - matchName: us.aws.cdn.hf.co
      toPorts:
        - ports:
            - port: "443"
